force-app/main/default/objects/Cmetadata_API__mdt/Cmetadata_API__mdt.object-meta.xml
<CustomObject>
    <description>for test</description>
    <label>Cmetadata</label>
    <pluralLabel>Cmetadata</pluralLabel>
</CustomObject>