force-app/main/default/objects/Cmetadata_API__mdt/fields/Acc_relation__c.field-meta.xml
<CustomField>
    <fullName>Acc_relation__c</fullName>
    <label>Acc relation</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>