force-app/main/default/objects/Cmetadata_API__mdt/fields/checkboxType__c.field-meta.xml
<CustomField>
    <fullName>checkboxType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for formula test</description>
    <inlineHelpText>for formula test  Help</inlineHelpText>
    <label>checkboxType</label>
    <type>Checkbox</type>
</CustomField>