force-app/main/default/objects/Cmetadata_API__mdt/fields/cmtDate_API__c.field-meta.xml
<CustomField>
    <fullName>cmtDate_API__c</fullName>
    <description>for formula test</description>
    <inlineHelpText>help</inlineHelpText>
    <label>cmtDate</label>
    <type>Date</type>
</CustomField>