force-app/main/default/objects/Cmetadata_API__mdt/fields/cmtPick__c.field-meta.xml
<CustomField>
    <fullName>cmtPick__c</fullName>
    <label>cmtPick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>val1</fullName>
                <default>true</default>
                <label>val1</label>
            </value>
            <value>
                <fullName>val2</fullName>
            </value>
            <value>
                <fullName>val3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>