force-app/main/default/objects/Cmetadata_API__mdt/fields/lookupCMT__c.field-meta.xml
<CustomField>
    <fullName>lookupCMT__c</fullName>
    <label>Lookup Rollup Summary</label>
    <referenceTo>dlrs__LookupRollupSummary2__mdt</referenceTo>
    <relationshipLabel>Cmetadata</relationshipLabel>
    <relationshipName>Cmetadata</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>