force-app/main/default/objects/Cmetadata_API__mdt/fields/Val1_API__c.field-meta.xml
<CustomField>
    <fullName>Val1_API__c</fullName>
    <label>Val1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>