force-app/main/default/objects/Cmetadata_API__mdt/validationRules/cmtRule.validationRule-meta.xml
<ValidationRule>
    <fullName>cmtRule</fullName>
    <active>true</active>
    <errorConditionFormula>Acc_relation__r.DeveloperName &lt;&gt; &apos;eyal&apos;</errorConditionFormula>
    <errorMessage>not tlv</errorMessage>
</ValidationRule>